Check add-task
